# MegviiLicMgr-Android-SDK

./: README.md
MGLicenseManageSDK/: .gitignore  settings.gradle
MGLicenseManageSDK/MGLicenseManageSDK/: build.gradle
MGLicenseManageSDK/MGLicenseManageSDK/src/main/: AndroidManifest.xml
MGLicenseManageSDK/MGLicenseManageSDK/src/main/java/com/megvii/licensemanager/sdk/: LicenseManager.java
MGLicenseManageSDK/MGLicenseManageSDK/src/main/java/com/megvii/licensemanager/sdk/jni/: NativeLicenseAPI.java
MGLicenseManageSDK/MGLicenseManageSDK/src/main/jni/: Android.mk  megvii_licensemanager_jni.h
MGLicenseManageSDK/MGLicenseManageSDK/src/main/jni/include/: MG_Common.h
MGLicenseManagerSDK/: .gitignore  settings.gradle
MGLicenseManagerSDK/LicenseManagerSDK/: build.gradle
MGLicenseManagerSDK/LicenseManagerSDK/src/main/cpp/: CMakeLists.txt  megvii_licensemanager_jni.cpp  megvii_licensemanager_jni.h
MGLicenseManagerSDK/LicenseManagerSDK/src/main/cpp/include/: MG_Common.h  MG_InnerUtils.h  MG_LicenseManager.h
MGLicenseManagerSDK/LicenseManagerSDK/src/main/java/com/megvii/licensemanager/sdk/: LicenseManager.java
MGLicenseManagerSDK/MGLicenseManagerSDK/: build.gradle
MGLicenseManagerSDK/MGLicenseManagerSDK/src/main/cpp/: megvii_licensemanager_jni.h
MGLicenseManagerSDK/MGLicenseManagerSDK/src/main/java/com/megvii/licensemanager/sdk/: LicenseManager.java
MGLicenseManagerSDK/MGLicenseManagerSDK/src/main/jni/: Android.mk  megvii_licensemanager_jni.cpp
MGLicenseManagerSDK/MGLicenseManagerSDK/src/main/jni/include/: MG_LicenseManager.h
(+7 files in other folders)
